# stc2gii_hack

./: .gitignore  README.md  pyproject.toml
src/stc2gii_hack/: __init__.py  hack.py  run_hack.py
tests/: test_stc2gii_hack.py
