[tool.poetry]
name = "stc2gii_hack"
version = "0.3.2"
description = ""
authors = ["Joshua Teves <joshua.teves@nih.gov>"]

[tool.poetry.dependencies]
python = "^3.8, <= 3.10"
mne = "1.0.2"
nibabel = "^3.2.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
