[tool.poetry]
name = "stc2gii_hack"
version = "0.3.5"
description = ""
authors = ["Joshua Teves <joshua.teves@nih.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
mne = "^1.2.1"
nibabel = "^3.2.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
stc2gii_hack = "stc2gii_hack.run_hack:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
